# passrs

./: Cargo.toml  README.md  TODOS.md
src/: cli.rs  db.rs  error.rs  lib.rs  main.rs  parse.rs
src/cmd/: add.rs  clear.rs  generate.rs  help.rs  info.rs  list.rs  meta.rs  mod.rs  quit.rs  remove.rs  update.rs  write.rs  yank.rs
src/db/: crypto.rs  file.rs  mod.rs
