[package]
name = "passrs"
version = "0.1.0"
authors = ["samflam"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "^7.1"
termion = "^1.5"
clap = "3.0.0-beta.2"
edit = "0.1.2"
rand = "^0.8.3"
copypasta = "^0.7.1"

serde_json = "^1.0"
base64 = "^0.13.0"
pbkdf2 = "^0.7.3"
password-hash = "^0.1.1"
fernet = "^0.1.3"
